--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!--header section ends-->
     <!--main stars-->
     <main class="main-container" id="home">
-            <img src="images/anasayfa.jpg" alt=""
+            <img src="İmages/anasayfa.jpg" alt=""
             style="height: 546px;">
             <h2 class="main-heading">Sağlıkla</h2>
             <p>Ruhunuzu besleyemezsiniz eğer bedeninizi fazladan beslemek durumuna girebilirsiniz.Ruhunuzu doyurun.</p>
@@ -70,28 +70,28 @@
         </div>
         <div class="tarif-box1">
             <div class="tarif-card">
-                <img src="images/tarif1.jpg" alt="1.tarif">
+                <img src="İmages/tarif1.jpg" alt="1.tarif">
                 <div class="info">
                 <h5>Tarif 1</h5>
                 <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic non quia doloribus neque magni nobis, ratione vitae vel similique iure rerum voluptate aperiam, officia voluptates dolore, at iusto asperiores? Ratione.</p>
                 </div>   
             </div>
             <div class="tarif-card">
-                <img src="images/tarif2.jpg" alt="1.tarif">
+                <img src="İmages/tarif2.jpg" alt="1.tarif">
                 <div class="info">
                 <h5>Tarif 2</h5>
                 <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic non quia doloribus neque magni nobis, ratione vitae vel similique iure rerum voluptate aperiam, officia voluptates dolore, at iusto asperiores? Ratione.</p>
                 </div>   
             </div>
             <div class="tarif-card">
-                <img src="images/tarif3.jpg" alt="1.tarif">
+                <img src="İmages/tarif3.jpg" alt="1.tarif">
                 <div class="info">
                 <h5>Tarif 3</h5>
                 <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic non quia doloribus neque magni nobis, ratione vitae vel similique iure rerum voluptate aperiam, officia voluptates dolore, at iusto asperiores? Ratione.</p>
                 </div>   
             </div>
             <div class="tarif-card">
-                <img src="images/tarif4.jpg" alt="1.tarif">
+                <img src="İmages/tarif4.jpg" alt="1.tarif">
                 <div class="info">
                 <h5>Tarif 4</h5>
                 <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic non quia doloribus neque magni nobis, ratione vitae vel similique iure rerum voluptate aperiam, officia voluptates dolore, at iusto asperiores? Ratione.</p>
@@ -100,28 +100,28 @@
         </div>
         <div class="tarif-box2">
             <div class="tarif-card">
-                <img src="images/tarif5.jpg" alt="1.tarif">
+                <img src="İmages/tarif5.jpg" alt="1.tarif">
                 <div class="info">
                 <h5>Tarif 5</h5>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic non quia doloribus neque magni nobis, ratione vitae vel similique iure rerum voluptate aperiam, officia voluptates dolore, at iusto asperiores? Ratione.</p>
                 </div>   
             </div>
             <div class="tarif-card">
-                <img src="images/tarif6.jpg" alt="1.tarif">
+                <img src="İmages/tarif6.jpg" alt="1.tarif">
                 <div class="info">
                 <h5>Tarif 6</h5>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic non quia doloribus neque magni nobis, ratione vitae vel similique iure rerum voluptate aperiam, officia voluptates dolore, at iusto asperiores? Ratione.</p>
                 </div>   
             </div>
             <div class="tarif-card">
-                <img src="images/tarif7.jpg" alt="1.tarif">
+                <img src="İmages/tarif7.jpg" alt="1.tarif">
                 <div class="info">
                 <h5>Tarif 7</h5>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic non quia doloribus neque magni nobis, ratione vitae vel similique iure rerum voluptate aperiam, officia voluptates dolore, at iusto asperiores? Ratione.</p>
                 </div>   
             </div>
             <div class="tarif-card">
-                <img src="images/tarif8.jpg" alt="1.tarif">
+                <img src="İmages/tarif8.jpg" alt="1.tarif">
                 <div class="info">
                 <h5>Tarif 8</h5>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic non quia doloribus neque magni nobis, ratione vitae vel similique iure rerum voluptate aperiam, officia voluptates dolore, at iusto asperiores? Ratione.</p>
